update dependencies & extract some constants & refactor some code(version:2022/05/08)